# cmake_learning

./: CMake_Note.txt  GreetingConfig.cmake
cmake_export/hello/: CMakeLists.txt
cmake_export/hello/cmake/: helloConfig.cmake
cmake_export/hello/include/hello/: bye.hpp
cmake_export/hello/src/: bye.cc  hello.cc
cmake_export/main/: CMakeLists.txt  main.cc
greeting/: CMakeLists.txt
greeting/example/: main.cpp
greeting/include/greeting/: sayhello.hpp
greeting/install/cmake/: GreetingConfig.cmake
greeting/install/include/greeting/: tellage.hpp
greeting/install/lib/: age_lib.lib
greeting/src/: sayhello.cpp
greeting_combined/: CMakeLists.txt
greeting_combined/example/: main.cpp
greeting_combined/include/greeting/: saygoodbye.hpp
greeting_combined/install/cmake/: GreetingCombinedConfig-debug.cmake
greeting_combined/src/: tellage.cpp
greeting_example/: CMakeLists.txt
greeting_example/src/: main.cpp
